@@ -1,8 +1,13 @@
 package com.uef.controller;
 
 import com.uef.model.EVENT;
+import com.uef.model.USER;
+import jakarta.validation.Valid;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
+import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestParam;
@@ -10,13 +15,15 @@ import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import org.springframework.web.bind.annotation.ModelAttribute;
 
 @Controller
 public class EventController {
 
-    // Mô phỏng dữ liệu sự kiện
+    private static final Logger logger = LoggerFactory.getLogger(EventController.class);
+
     private List<EVENT> events = new ArrayList<>();
+    private List<USER> users = new ArrayList<>();
 
     public EventController() {
         events.add(new EVENT(1, "Hội thảo Công nghệ 2025", "Sự kiện về công nghệ", "2025-07-01", 2, "Công nghệ", "2025-06-25", 0, "email@example.com", 50, "Mở"));
@@ -28,32 +35,26 @@ public class EventController {
     public String home(Model model,
                        @RequestParam(value = "keyword", required = false) String keyword,
                        @RequestParam(value = "category", required = false) String category) {
-
         List<String> categories = events.stream()
             .map(EVENT::getType)
             .distinct()
-            .collect(Collectors.toList());
-
+            .toList();
         List<EVENT> filteredEvents = new ArrayList<>(events);
-
         if (keyword != null && !keyword.trim().isEmpty()) {
             filteredEvents = filteredEvents.stream()
                 .filter(e -> e.getName().toLowerCase().contains(keyword.toLowerCase()))
-                .collect(Collectors.toList());
+                .toList();
         }
-
         if (category != null && !category.isEmpty()) {
             filteredEvents = filteredEvents.stream()
                 .filter(e -> e.getType().equals(category))
-                .collect(Collectors.toList());
+                .toList();
         }
-
         model.addAttribute("events", filteredEvents);
         model.addAttribute("categories", categories);
+        model.addAttribute("userForm", new USER());
         model.addAttribute("body", "/WEB-INF/views/event/list.jsp");
-        model.addAttribute("advantage","/WEB-INF/views/layout/benefit.jsp");
-       
-
+        model.addAttribute("advantage", "/WEB-INF/views/layout/benefit.jsp");
         return "layout/main";
     }
 
@@ -64,45 +65,73 @@ public class EventController {
     }
 
     @PostMapping("/login")
-    public String processLogin(@RequestParam String username,
+    public String processLogin(@RequestParam String email,
                                @RequestParam String password,
                                RedirectAttributes ra) {
-        // Mô phỏng xác thực người dùng
-        if ("user".equals(username) && "password".equals(password)) {
+        USER matchedUser = users.stream()
+            .filter(u -> u.getEmail().equalsIgnoreCase(email) && u.getPassword().equals(password))
+            .findFirst()
+            .orElse(null);
+        if (matchedUser != null) {
             ra.addFlashAttribute("msg", "Đăng nhập thành công!");
             return "redirect:/";
         } else {
-            ra.addFlashAttribute("error", "Tên đăng nhập hoặc mật khẩu không đúng.");
+            ra.addFlashAttribute("error", "Email hoặc mật khẩu không đúng.");
             return "redirect:/login";
         }
     }
 
     @GetMapping("/signup")
     public String showSignup(Model model) {
-        model.addAttribute("body", "/WEB-INF/views/dashboard/signup.jsp");
-        return "layout/main";
+        model.addAttribute("userForm", new USER());
+        return "redirect:/";
+    }
+
+    @PostMapping("/signup")
+    public String processSignup(@Valid @ModelAttribute("userForm") USER user, BindingResult result, RedirectAttributes ra) {
+        logger.info("Received signup request for email: {}", user.getEmail());
+
+        if (result.hasErrors()) {
+            logger.error("Validation errors: {}", result.getAllErrors());
+            ra.addFlashAttribute("error", "Vui lòng kiểm tra lại thông tin.");
+            ra.addFlashAttribute("org.springframework.validation.BindingResult.userForm", result);
+            ra.addFlashAttribute("userForm", user);
+            return "redirect:/";
+        }
+
+        try {
+            boolean exists = users.stream().anyMatch(u -> u.getEmail().equalsIgnoreCase(user.getEmail()));
+            if (exists) {
+                logger.warn("Email already exists: {}", user.getEmail());
+                ra.addFlashAttribute("error", "Email đã được đăng ký.");
+                return "redirect:/";
+            }
+            users.add(user);
+            logger.info("User registered successfully: {}", user.getEmail());
+            ra.addFlashAttribute("msg", "Đăng ký tài khoản thành công!");
+            return "redirect:/login";
+        } catch (Exception e) {
+            logger.error("Error during signup process: ", e);
+            ra.addFlashAttribute("error", "Đã xảy ra lỗi khi đăng ký. Vui lòng thử lại.");
+            return "redirect:/";
+        }
     }
 
     @PostMapping("/register")
     public String registerEvent(@RequestParam int eventId, RedirectAttributes ra) {
         EVENT event = events.stream().filter(e -> e.getId() == eventId).findFirst().orElse(null);
-
         if (event == null) {
             ra.addFlashAttribute("error", "Sự kiện không tồn tại.");
             return "redirect:/";
         }
-
         if (!"Mở".equalsIgnoreCase(event.getStatus())) {
             ra.addFlashAttribute("error", "Đăng ký đã đóng: Hạn đăng ký đã hết.");
             return "redirect:/";
         }
-
         if (event.getSlots() <= 0) {
             ra.addFlashAttribute("error", "Đăng ký thất bại: Sự kiện đã đầy.");
             return "redirect:/";
         }
-
-        // Mô phỏng đăng ký thành công
         event.setSlots(event.getSlots() - 1);
         ra.addFlashAttribute("msg", "Đăng ký thành công! Mã xác nhận: " + generateConfirmationCode());
         return "redirect:/";
@@ -111,5 +140,4 @@ public class EventController {
     private String generateConfirmationCode() {
         return "CONF-" + (int)(Math.random() * 10000);
     }
-
 }
